# Tiny-SDnCNN

./: .gitignore  README.md  mega_estimator.py  model.py  playground.py  pyproject.toml  test.py  train.py  tune.py  utils.py
conf/: primary.yaml
conf/variations/: restoring.yaml  tuning.yaml
scripts/playground/: playground.py
scripts/splitter/: main.py
